--- a/resources/frontend/components/Dropdown.module.scss
+++ b/resources/frontend/components/Dropdown.module.scss
@@ -21,3 +21,9 @@
     font-weight: 600;
     margin-bottom: 10px;
 }
+
+.dropdownError {
+    color: #d62828;
+    margin: 5px;
+    font-size: 14px;
+}
