--- a/resources/frontend/components/Inventory/AddInventory.module.scss
+++ b/resources/frontend/components/Inventory/AddInventory.module.scss
@@ -1,4 +1,4 @@
-@import "../assets/scss/main.module.scss";
+@import "../../assets/scss/main.module.scss";
 
 .addInventoryTitle {
     font-size: 24px;
