--- a/resources/frontend/components/Table.module.scss
+++ b/resources/frontend/components/Table.module.scss
@@ -13,8 +13,9 @@ table input {
 
 table {
     width: 100%;
-    border-collapse: collapse;
+    border-collapse: separate;
     border: none;
+    border-spacing: 0 9px;
 }
 
 thead th {
@@ -102,4 +103,14 @@ hr {
     display: flex;
     justify-content: center;
     padding: 20px;
+}
+
+.tableButton {
+    height: 40px;
+    width: 40px;
+    background-color: transparent;
+    color: $c_primary;
+    border: 1px solid $c_gray;
+    border-radius: 5px;
+    justify-content: center;
 }
