styles: Change font style

--- a/resources/frontend/assets/scss/main.module.scss
+++ b/resources/frontend/assets/scss/main.module.scss
@@ -1,7 +1,4 @@
-@font-face {
-    font-family: "Manrope";
-    src: url("/resources/frontend/assets/font/manrope.ttf") format("truetype");
-}
+@import url("https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap");
 
 $b_primary: #ffffff;
 $b_secondary: #f8f8f8;
