--- a/public/assets/bundle.css
+++ b/public/assets/bundle.css
@@ -74,6 +74,10 @@
   !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[1].use[1]!./node_modules/postcss-loader/dist/cjs.js??ruleSet[1].rules[1].use[2]!./node_modules/sass-loader/dist/cjs.js??ruleSet[1].rules[1].use[3]!./resources/frontend/pages/Orders.module.scss ***!
   \********************************************************************************************************************************************************************************************************************************************************************/
 @import url(https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap);
+/*!**************************************************************************************************************************************************************************************************************************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[1].use[1]!./node_modules/postcss-loader/dist/cjs.js??ruleSet[1].rules[1].use[2]!./node_modules/sass-loader/dist/cjs.js??ruleSet[1].rules[1].use[3]!./resources/frontend/components/Customers/Purchases.module.scss ***!
+  \**************************************************************************************************************************************************************************************************************************************************************************************/
+@import url(https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap);
 /*!******************************************************************************************************************************************************************************************************************************************************************************!*\
   !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[1].use[1]!./node_modules/postcss-loader/dist/cjs.js??ruleSet[1].rules[1].use[2]!./node_modules/sass-loader/dist/cjs.js??ruleSet[1].rules[1].use[3]!./resources/frontend/components/Sidebar.module.scss (1) ***!
   \******************************************************************************************************************************************************************************************************************************************************************************/
@@ -308,6 +312,10 @@ body {
   margin: 0;
   font-family: "Manrope", sans-serif;
   background-color: #f8f8f8;
+}
+
+.Input-module-inputBox-IwEKx {
+  width: auto;
 }
 
 .Input-module-inputContainer-xIoXf {
@@ -745,13 +753,13 @@ body {
 
 .Filter-module-filter-lMnwd {
   position: absolute;
-  top: 220px;
-  right: 215px;
+  top: 230px;
+  right: 205px;
   background: #ffffff;
   padding: 25px 20px;
   border: 1px solid #d7d7d7;
   border-radius: 5px;
-  min-width: 270px;
+  max-width: 365px;
   display: flex;
   flex-flow: column;
   row-gap: 30px;
@@ -774,7 +782,7 @@ body {
   width: 100%;
 }
 
-.Filter-module-filterDate-g5a2a {
+.Filter-module-filterDateTotal-PfhZr {
   display: flex;
   column-gap: 10px;
   align-items: center;
@@ -850,8 +858,8 @@ body {
 
 .Sort-module-sort-Q0dfE {
   position: absolute;
-  top: 220px;
-  right: 90px;
+  top: 230px;
+  right: 80px;
   background: #ffffff;
   padding: 25px 20px;
   border: 1px solid #d7d7d7;
@@ -1010,4 +1018,97 @@ body {
   background-color: #ffffff !important;
   color: #989898 !important;
   border: 1px solid #d7d7d7 !important;
+}
+/*!******************************************************************************************************************************************************************************************************************************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[1].use[1]!./node_modules/postcss-loader/dist/cjs.js??ruleSet[1].rules[1].use[2]!./node_modules/sass-loader/dist/cjs.js??ruleSet[1].rules[1].use[3]!./resources/frontend/components/Customers/Purchases.module.scss (1) ***!
+  \******************************************************************************************************************************************************************************************************************************************************************************************/
+body {
+  margin: 0;
+  font-family: "Manrope", sans-serif;
+  background-color: #f8f8f8;
+}
+
+.Purchases-module-purchasesContent-_kVti {
+  height: fit-content;
+  max-height: calc(100% - 170px);
+  width: calc(100% - 330px);
+  position: absolute;
+  top: 71px;
+  right: 0;
+  padding: 40px 40px 40px 40px;
+}
+
+.Purchases-module-purchasesHeader-WMRL4 {
+  font-weight: bolder;
+  font-size: 24px;
+  display: flex;
+  margin-bottom: 70px;
+  align-items: center;
+}
+
+.Purchases-module-purchasesBackButton-O3T6z {
+  background-color: transparent;
+  color: #989898;
+  padding: 15px 0;
+  margin-right: 10px;
+}
+
+.Purchases-module-purchasesMain-AQrW0 {
+  background-color: #ffffff;
+  width: 100%;
+  height: calc(100% - 68px);
+  border: 1px solid #d7d7d7;
+  border-radius: 5px;
+}
+
+.Purchases-module-purchasesSearchFilter-jskx0 {
+  display: flex;
+  justify-content: end;
+  align-items: baseline;
+  padding: 20px 40px 20px 0;
+  column-gap: 20px;
+}
+
+.Purchases-module-purchasesFilter-qhZ4J {
+  background-color: #ffffff !important;
+  color: #989898 !important;
+  border: 1px solid #d7d7d7 !important;
+}
+
+.Purchases-module-purchasesInfo-AiFWF {
+  background-color: #ffffff;
+  background-color: #ffffff;
+  padding: 30px;
+  border: 1px solid #d7d7d7;
+  border-radius: 5px;
+  height: fit-content;
+  display: flex;
+  flex-direction: column;
+  row-gap: 45px;
+}
+
+.Purchases-module-purchasesInfoContainer-ocnj2 {
+  font-size: 18px;
+  font-weight: bold;
+  display: flex;
+  flex-direction: column;
+  row-gap: 30px;
+  width: max-content;
+}
+
+.Purchases-module-purchasesInfoDetails-uMIFc {
+  font-size: 16px;
+  font-weight: normal;
+  display: flex;
+  flex-direction: column;
+  row-gap: 20px;
+}
+
+.Purchases-module-purchasesInfoDetails-uMIFc p {
+  margin: 0;
+}
+
+.Purchases-module-infoContainer-CWn3C {
+  display: flex;
+  column-gap: 30px;
 }
