Add employees table

--- a/resources/frontend/components/Sidebar.module.scss
+++ b/resources/frontend/components/Sidebar.module.scss
@@ -4,8 +4,14 @@
     background-color: $b_darker;
     height: 100dvh;
     width: 230px;
-}
 
-.barLinkContainer {
-    margin-top: 10px;
+    .barLinkContainer {
+        margin-top: 10px;
+
+        .otherMenu {
+            color: $c_mediumgray;
+            font-size: 14px;
+            margin: 15px 0 10px 10px;
+        }
+    }
 }
