--- a/public/assets/bundle.css
+++ b/public/assets/bundle.css
@@ -74,6 +74,10 @@
   !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[1].use[1]!./node_modules/postcss-loader/dist/cjs.js??ruleSet[1].rules[1].use[2]!./node_modules/sass-loader/dist/cjs.js??ruleSet[1].rules[1].use[3]!./resources/frontend/pages/Orders.module.scss ***!
   \********************************************************************************************************************************************************************************************************************************************************************/
 @import url(https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap);
+/*!***********************************************************************************************************************************************************************************************************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[1].use[1]!./node_modules/postcss-loader/dist/cjs.js??ruleSet[1].rules[1].use[2]!./node_modules/sass-loader/dist/cjs.js??ruleSet[1].rules[1].use[3]!./resources/frontend/pages/Employees.module.scss ***!
+  \***********************************************************************************************************************************************************************************************************************************************************************/
+@import url(https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap);
 /*!**************************************************************************************************************************************************************************************************************************************************************************************!*\
   !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[1].use[1]!./node_modules/postcss-loader/dist/cjs.js??ruleSet[1].rules[1].use[2]!./node_modules/sass-loader/dist/cjs.js??ruleSet[1].rules[1].use[3]!./resources/frontend/components/Customers/Purchases.module.scss ***!
   \**************************************************************************************************************************************************************************************************************************************************************************************/
@@ -92,9 +96,13 @@ body {
   height: 100dvh;
   width: 230px;
 }
-
-.Sidebar-module-barLinkContainer-XCRE1 {
+.Sidebar-module-sideBar-cTter .Sidebar-module-barLinkContainer-XCRE1 {
   margin-top: 10px;
+}
+.Sidebar-module-sideBar-cTter .Sidebar-module-barLinkContainer-XCRE1 .Sidebar-module-otherMenu-NvMxJ {
+  color: #989898;
+  font-size: 14px;
+  margin: 15px 0 10px 10px;
 }
 /*!******************************************************************************************************************************************************************************************************************************************************************************!*\
   !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[1].use[1]!./node_modules/postcss-loader/dist/cjs.js??ruleSet[1].rules[1].use[2]!./node_modules/sass-loader/dist/cjs.js??ruleSet[1].rules[1].use[3]!./resources/frontend/components/BarLink.module.scss (1) ***!
@@ -1015,6 +1023,56 @@ body {
 }
 
 .Orders-module-ordersFilter-moWlZ {
+  background-color: #ffffff !important;
+  color: #989898 !important;
+  border: 1px solid #d7d7d7 !important;
+}
+/*!***************************************************************************************************************************************************************************************************************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[1].use[1]!./node_modules/postcss-loader/dist/cjs.js??ruleSet[1].rules[1].use[2]!./node_modules/sass-loader/dist/cjs.js??ruleSet[1].rules[1].use[3]!./resources/frontend/pages/Employees.module.scss (1) ***!
+  \***************************************************************************************************************************************************************************************************************************************************************************/
+body {
+  margin: 0;
+  font-family: "Manrope", sans-serif;
+  background-color: #f8f8f8;
+}
+
+.Employees-module-employeesContent-UgrIt {
+  height: fit-content;
+  max-height: calc(100% - 170px);
+  width: calc(100% - 330px);
+  position: absolute;
+  top: 71px;
+  right: 0;
+  padding: 40px 40px 40px 40px;
+}
+
+.Employees-module-employeesHeader-b5qK8 {
+  font-weight: bolder;
+  font-size: 24px;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 50px;
+  align-items: center;
+}
+
+.Employees-module-employeesMain-iKjgA {
+  background-color: #ffffff;
+  margin-top: 20px;
+  width: 100%;
+  height: calc(100% - 68px);
+  border: 1px solid #d7d7d7;
+  border-radius: 5px;
+}
+
+.Employees-module-employeesSearchFilter-xnVYW {
+  display: flex;
+  justify-content: end;
+  align-items: baseline;
+  padding: 20px 40px 20px 0;
+  column-gap: 20px;
+}
+
+.Employees-module-employeesFilter-DqhGR {
   background-color: #ffffff !important;
   color: #989898 !important;
   border: 1px solid #d7d7d7 !important;
