--- a/public/assets/bundle.css
+++ b/public/assets/bundle.css
@@ -82,6 +82,10 @@
   !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[1].use[1]!./node_modules/postcss-loader/dist/cjs.js??ruleSet[1].rules[1].use[2]!./node_modules/sass-loader/dist/cjs.js??ruleSet[1].rules[1].use[3]!./resources/frontend/components/Customers/Purchases.module.scss ***!
   \**************************************************************************************************************************************************************************************************************************************************************************************/
 @import url(https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap);
+/*!************************************************************************************************************************************************************************************************************************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[1].use[1]!./node_modules/postcss-loader/dist/cjs.js??ruleSet[1].rules[1].use[2]!./node_modules/sass-loader/dist/cjs.js??ruleSet[1].rules[1].use[3]!./resources/frontend/components/Employees/Details.module.scss ***!
+  \************************************************************************************************************************************************************************************************************************************************************************************/
+@import url(https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap);
 /*!******************************************************************************************************************************************************************************************************************************************************************************!*\
   !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[1].use[1]!./node_modules/postcss-loader/dist/cjs.js??ruleSet[1].rules[1].use[2]!./node_modules/sass-loader/dist/cjs.js??ruleSet[1].rules[1].use[3]!./resources/frontend/components/Sidebar.module.scss (1) ***!
   \******************************************************************************************************************************************************************************************************************************************************************************/
@@ -89,6 +93,10 @@ body {
   margin: 0;
   font-family: "Manrope", sans-serif;
   background-color: #f8f8f8;
+}
+
+p {
+  margin: 0;
 }
 
 .Sidebar-module-sideBar-cTter {
@@ -111,6 +119,10 @@ body {
   margin: 0;
   font-family: "Manrope", sans-serif;
   background-color: #f8f8f8;
+}
+
+p {
+  margin: 0;
 }
 
 .BarLink-module-barLink-smYzG {
@@ -168,6 +180,10 @@ body {
   background-color: #f8f8f8;
 }
 
+p {
+  margin: 0;
+}
+
 .TopBar-module-topBar-HRlVI {
   background-color: #ffffff;
   height: 70px;
@@ -195,6 +211,10 @@ body {
   background-color: #f8f8f8;
 }
 
+p {
+  margin: 0;
+}
+
 .Branch-module-branchDropdown-qNVP4 {
   font-size: 15px;
   font-weight: bolder;
@@ -215,6 +235,10 @@ body {
   margin: 0;
   font-family: "Manrope", sans-serif;
   background-color: #f8f8f8;
+}
+
+p {
+  margin: 0;
 }
 
 .Role-module-role-f2xKy {
@@ -247,6 +271,10 @@ body {
   margin: 0;
   font-family: "Manrope", sans-serif;
   background-color: #f8f8f8;
+}
+
+p {
+  margin: 0;
 }
 
 .Inventory-module-inventoryContent-F9wLx {
@@ -299,6 +327,10 @@ body {
   background-color: #f8f8f8;
 }
 
+p {
+  margin: 0;
+}
+
 .Button-module-button-ibCSs {
   background-color: #373737;
   color: #ffffff;
@@ -320,6 +352,10 @@ body {
   margin: 0;
   font-family: "Manrope", sans-serif;
   background-color: #f8f8f8;
+}
+
+p {
+  margin: 0;
 }
 
 .Input-module-inputBox-IwEKx {
@@ -379,6 +415,10 @@ body {
   margin: 0;
   font-family: "Manrope", sans-serif;
   background-color: #f8f8f8;
+}
+
+p {
+  margin: 0;
 }
 
 table input {
@@ -504,6 +544,10 @@ body {
   background-color: #f8f8f8;
 }
 
+p {
+  margin: 0;
+}
+
 .Modal-module-modal-KJ1EV {
   position: fixed;
   left: 0;
@@ -541,6 +585,10 @@ body {
   margin: 0;
   font-family: "Manrope", sans-serif;
   background-color: #f8f8f8;
+}
+
+p {
+  margin: 0;
 }
 
 .AddInventory-module-addInventoryTitle-k1DMP {
@@ -587,6 +635,10 @@ body {
   margin: 0;
   font-family: "Manrope", sans-serif;
   background-color: #f8f8f8;
+}
+
+p {
+  margin: 0;
 }
 
 .UploadImage-module-uploadImage-eUeqy {
@@ -641,6 +693,10 @@ body {
   background-color: #f8f8f8;
 }
 
+p {
+  margin: 0;
+}
+
 .Dropdown-module-dropdown-SawRn {
   font-size: 15px;
   font-weight: bolder;
@@ -677,6 +733,10 @@ body {
   background-color: #f8f8f8;
 }
 
+p {
+  margin: 0;
+}
+
 .DeleteInventory-module-deleteInventoryTitle-cQQ58 {
   font-size: 24px;
   font-weight: bolder;
@@ -711,6 +771,10 @@ body {
   margin: 0;
   font-family: "Manrope", sans-serif;
   background-color: #f8f8f8;
+}
+
+p {
+  margin: 0;
 }
 
 .EditInventory-module-editInventoryTitle-pspya {
@@ -757,6 +821,10 @@ body {
   margin: 0;
   font-family: "Manrope", sans-serif;
   background-color: #f8f8f8;
+}
+
+p {
+  margin: 0;
 }
 
 .Filter-module-filter-lMnwd {
@@ -864,6 +932,10 @@ body {
   background-color: #f8f8f8;
 }
 
+p {
+  margin: 0;
+}
+
 .Sort-module-sort-Q0dfE {
   position: absolute;
   top: 230px;
@@ -938,6 +1010,10 @@ body {
   background-color: #f8f8f8;
 }
 
+p {
+  margin: 0;
+}
+
 .Customers-module-customersContent-Gy6hb {
   height: fit-content;
   max-height: calc(100% - 170px);
@@ -988,6 +1064,10 @@ body {
   background-color: #f8f8f8;
 }
 
+p {
+  margin: 0;
+}
+
 .Orders-module-ordersContent-gz2pr {
   height: fit-content;
   max-height: calc(100% - 170px);
@@ -1034,6 +1114,10 @@ body {
   margin: 0;
   font-family: "Manrope", sans-serif;
   background-color: #f8f8f8;
+}
+
+p {
+  margin: 0;
 }
 
 .Employees-module-employeesContent-UgrIt {
@@ -1084,6 +1168,10 @@ body {
   margin: 0;
   font-family: "Manrope", sans-serif;
   background-color: #f8f8f8;
+}
+
+p {
+  margin: 0;
 }
 
 .Purchases-module-purchasesContent-_kVti {
@@ -1169,4 +1257,90 @@ body {
 .Purchases-module-infoContainer-CWn3C {
   display: flex;
   column-gap: 30px;
+}
+/*!****************************************************************************************************************************************************************************************************************************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[1].use[1]!./node_modules/postcss-loader/dist/cjs.js??ruleSet[1].rules[1].use[2]!./node_modules/sass-loader/dist/cjs.js??ruleSet[1].rules[1].use[3]!./resources/frontend/components/Employees/Details.module.scss (1) ***!
+  \****************************************************************************************************************************************************************************************************************************************************************************************/
+body {
+  margin: 0;
+  font-family: "Manrope", sans-serif;
+  background-color: #f8f8f8;
+}
+
+p {
+  margin: 0;
+}
+
+.Details-module-detailContent-zjG7M {
+  height: fit-content;
+  max-height: calc(100% - 170px);
+  width: calc(100% - 330px);
+  position: absolute;
+  top: 71px;
+  right: 0;
+  padding: 40px;
+}
+
+.Details-module-detailHeader-Q_UtA {
+  font-weight: bolder;
+  font-size: 24px;
+  display: flex;
+  margin-bottom: 30px;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.Details-module-detailBackButton-NR83f {
+  background-color: transparent;
+  color: #989898;
+  padding: 15px 0;
+  margin-right: 10px;
+}
+
+.Details-module-detailsContainer-ilj99 {
+  display: grid;
+  grid-template-columns: 3fr 2fr;
+  gap: 20px;
+  margin: 0 auto 30px 0;
+}
+
+.Details-module-infoContainer-jiZ5h {
+  padding: 30px;
+  border: 1px solid #d7d7d7;
+  border-radius: 5px;
+  background-color: #ffffff;
+  height: fit-content;
+}
+
+.Details-module-infoTable-MvTfL {
+  display: grid;
+  grid-template-columns: 1.5fr 3fr;
+  gap: 20px;
+  margin-top: 30px;
+}
+
+.Details-module-infoTable-MvTfL div {
+  display: contents;
+}
+
+.Details-module-infoContainer-jiZ5h > p:first-child {
+  font-weight: 800;
+  color: #3f3f3f;
+  font-size: 18px;
+}
+
+.Details-module-infoTable-MvTfL > div > p {
+  color: #737373;
+}
+
+.Details-module-infoTable-MvTfL > div > p:first-of-type {
+  font-weight: 600;
+  color: #3f3f3f;
+}
+
+.Details-module-deleteButton-LlLav {
+  background-color: transparent;
+  border: 1.5px solid #d62828;
+  color: #d62828;
+  font-weight: 500;
 }
