--- a/public/assets/bundle.css
+++ b/public/assets/bundle.css
@@ -591,6 +591,7 @@ body {
 
 .UploadImage-module-uploadImage-eUeqy {
   display: block;
+  cursor: pointer;
 }
 
 .UploadImage-module-uploadImageContainer-slFqS {
@@ -603,7 +604,6 @@ body {
   align-items: center;
   flex-direction: column;
   row-gap: 33px;
-  cursor: pointer;
 }
 
 .UploadImage-module-uploadImageIcon-eJ59A {
@@ -615,6 +615,7 @@ body {
   font-weight: 600;
   color: #373737;
   text-align: center;
+  cursor: pointer;
 }
 
 .UploadImage-module-uploadImageError-jndW4 {
@@ -631,6 +632,27 @@ body {
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+.UploadImage-module-uploadImageChange-cbr3A {
+  position: fixed;
+  width: 280px;
+  height: 280px;
+  background-color: rgba(0, 0, 0, 0.6);
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 18px;
+  font-weight: bold;
+  border-radius: 8px;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  cursor: pointer;
+}
+
+.UploadImage-module-uploadImageContainer-slFqS:hover .UploadImage-module-uploadImageChange-cbr3A {
+  opacity: 1;
 }
 /*!*******************************************************************************************************************************************************************************************************************************************************************************!*\
   !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[1].use[1]!./node_modules/postcss-loader/dist/cjs.js??ruleSet[1].rules[1].use[2]!./node_modules/sass-loader/dist/cjs.js??ruleSet[1].rules[1].use[3]!./resources/frontend/components/Dropdown.module.scss (1) ***!
