--- a/resources/frontend/components/UploadImage.module.scss
+++ b/resources/frontend/components/UploadImage.module.scss
@@ -2,6 +2,7 @@
 
 .uploadImage {
     display: block;
+    cursor: pointer;
 }
 
 .uploadImageContainer {
@@ -14,7 +15,6 @@
     align-items: center;
     flex-direction: column;
     row-gap: 33px;
-    cursor: pointer;
 }
 
 .uploadImageIcon {
@@ -26,6 +26,7 @@
     font-weight: 600;
     color: $c_primary;
     text-align: center;
+    cursor: pointer;
 }
 
 .uploadImageError {
@@ -42,4 +43,25 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+.uploadImageChange {
+    position: fixed;
+    width: 280px;
+    height: 280px;
+    background-color: rgba(0, 0, 0, 0.6);
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 18px;
+    font-weight: bold;
+    border-radius: 8px;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+    cursor: pointer;
+}
+
+.uploadImageContainer:hover .uploadImageChange {
+    opacity: 1;
 }
