--- a/resources/frontend/components/Table.module.scss
+++ b/resources/frontend/components/Table.module.scss
@@ -9,13 +9,15 @@ table input {
 .productImage {
     height: 40px;
     width: 40px;
+    display: flex;
 }
 
 table {
     width: 100%;
     border-collapse: separate;
     border: none;
-    border-spacing: 0 9px;
+    border-spacing: 0 10px;
+    margin-top: -10px;
 }
 
 thead th {
@@ -28,17 +30,9 @@ thead th {
     color: $c_darkgray;
 }
 
-thead {
-    padding-bottom: 10px;
-}
-
 thead tr {
     border: none;
     padding-bottom: 5px;
-}
-
-tbody {
-    margin-top: 10px;
 }
 
 tbody td {
