--- a/resources/frontend/pages/Employees.module.scss
+++ b/resources/frontend/pages/Employees.module.scss
@@ -41,3 +41,9 @@
     color: $c_mediumgray !important;
     border: 1px solid $c_gray !important;
 }
+
+.emploeesOptionContainer {
+    position: relative;
+    display: flex;
+    flex-direction: row-reverse;
+}
