--- a/resources/frontend/pages/Orders.module.scss
+++ b/resources/frontend/pages/Orders.module.scss
@@ -39,3 +39,9 @@
     color: $c_mediumgray !important;
     border: 1px solid $c_gray !important;
 }
+
+.ordersOptionContainer {
+    position: relative;
+    display: flex;
+    flex-direction: row-reverse;
+}
