Added overlay in table image and refactor css

--- a/resources/frontend/components/Customers/CustomerOrders.module.scss
+++ b/resources/frontend/components/Customers/CustomerOrders.module.scss
@@ -84,3 +84,9 @@
     display: flex;
     column-gap: 30px;
 }
+
+.customerOrdersOptionContainer {
+    position: relative;
+    display: flex;
+    flex-direction: row-reverse;
+}
