--- a/resources/frontend/components/Table.module.scss
+++ b/resources/frontend/components/Table.module.scss
@@ -108,3 +108,30 @@ hr {
     border-radius: 5px;
     justify-content: center;
 }
+
+.tableViewImage {
+    position: absolute;
+    top: 0;
+    width: 40px;
+    height: 40px;
+    background-color: rgba(0, 0, 0, 0.6);
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 18px;
+    font-weight: bold;
+    border-radius: 5px;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+    cursor: pointer;
+}
+
+.tableImageContainer:hover .tableViewImage {
+    opacity: 1;
+}
+
+.tableImageContainer {
+    position: relative;
+    width: fit-content;
+}
