--- a/resources/frontend/components/Orders/OrderList.module.scss
+++ b/resources/frontend/components/Orders/OrderList.module.scss
@@ -13,10 +13,13 @@
 .detailHeader {
     font-weight: bolder;
     font-size: 24px;
-    display: flex;
     margin-bottom: 30px;
+}
+
+.detailHeader > div:first-child {
+    display: flex;
+    flex-direction: row;
     align-items: center;
-    justify-content: space-between;
 }
 
 .detailBackButton {
@@ -72,4 +75,21 @@
     border: 1.5px solid #d62828;
     color: #d62828;
     font-weight: 500;
+}
+
+.orderBadge {
+    font-size: 13px;
+    font-weight: 600;
+    color: $c_dark;
+    background-color: $c_gray;
+    border-radius: 50px;
+    padding: 5px 15px;
+    margin-left: 10px;
+}
+
+.orderDateTime {
+    font-size: 16px;
+    font-weight: 500;
+    margin-left: 30px;
+    color: $c_darkgray;
 }
