--- a/resources/frontend/components/Sidebar.module.scss
+++ b/resources/frontend/components/Sidebar.module.scss
@@ -4,6 +4,7 @@
     background-color: $b_darker;
     height: 100dvh;
     width: 230px;
+    position: fixed;
 
     .barLinkContainer {
         margin-top: 10px;
