--- a/resources/frontend/components/Customers/CustomerOrders.module.scss
+++ b/resources/frontend/components/Customers/CustomerOrders.module.scss
@@ -28,7 +28,7 @@
 .purchasesMain {
     background-color: $b_primary;
     width: 100%;
-    height: calc(100% - 68px);
+    height: fit-content;
     border: 1px solid $c_gray;
     border-radius: 5px;
 }
@@ -56,7 +56,7 @@
     height: fit-content;
     display: flex;
     flex-direction: column;
-    row-gap: 45px;
+    row-gap: 30px;
 }
 
 .purchasesInfoContainer {
@@ -64,7 +64,7 @@
     font-weight: bold;
     display: flex;
     flex-direction: column;
-    row-gap: 30px;
+    row-gap: 20px;
     width: max-content;
 }
 
@@ -73,16 +73,23 @@
     font-weight: normal;
     display: flex;
     flex-direction: column;
-    row-gap: 20px;
+    row-gap: 15px;
 }
 
 .purchasesInfoDetails p {
     margin: 0;
 }
 
+.purchasesInfoDetails span {
+    color: $c_mediumgray;
+    margin-left: 10px;
+}
+
 .infoContainer {
-    display: flex;
-    column-gap: 30px;
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    gap: 20px;
+    margin: 0 auto 30px 0;
 }
 
 .customerOrdersOptionContainer {
