--- a/resources/frontend/components/Table.module.scss
+++ b/resources/frontend/components/Table.module.scss
@@ -38,6 +38,10 @@ thead tr {
 tbody td {
     border: none;
     padding: 0 20px;
+    white-space: nowrap; 
+    overflow: hidden;       
+    text-overflow: ellipsis;   
+    max-width: 150px;
 }
 
 tbody tr {
