--- a/resources/frontend/components/TopBar.module.scss
+++ b/resources/frontend/components/TopBar.module.scss
@@ -11,6 +11,8 @@
     padding: 0 50px 0 50px;
     justify-content: space-between;
     border-bottom: 1px solid $c_gray;
+    position: fixed;
+    z-index: 1;
 }
 
 .topBarGroup {
